Update homepage earn graphic and fix spacings on mobile

--- a/app/styles/view-specific/information/_all.scss
+++ b/app/styles/view-specific/information/_all.scss
@@ -349,8 +349,8 @@ $html-name-space:'.info-page';
   }
 
   .info-page-box {
-    padding-top: $info-box-padding / 2;
-    padding-bottom: $info-box-padding / 2;
+    padding-top: $info-box-padding;
+    padding-bottom: $info-box-padding;
 
     // We increase padding at S by default.
     @media (min-width:$screen-s-min) {
@@ -360,8 +360,8 @@ $html-name-space:'.info-page';
   }
 
   .image-text-sm {
-    padding-top: $info-box-padding / 2;
-    padding-bottom: $info-box-padding / 2;
+    padding-top: $info-box-padding;
+    padding-bottom: $info-box-padding;
 
     @media (min-width:$screen-sm-min) {
       padding-top: $info-box-padding;
@@ -860,8 +860,8 @@ $html-name-space:'.info-page';
 
   .info-page-box-3-step {
     img {
-      max-width: 200px;
-      margin-bottom: 40px;
+      max-width: 220px;
+      margin-bottom: 30px;
     }
     h2 {
       font-size: 26px;
